web-infras/parser/tests/fixtures/babel/es2017/trailing-function-commas/7/output.txt
[SyntaxError]: sequence expression can not have trailing comma. (1,9)
1|('foo',)
 |       ^
